# Openenv-hackathon

./: .dockerignore  .gitignore  Dockerfile  GUIDE.md  PROJECT_STATUS.md  README.md  SETUP.md  generate_cases.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_server.py  test_e2e.py  test_standalone.py  update.md
.claude/: settings.local.json
data/: cases.json
himanshu/: DMS LAtest code.txt  index.html  package.json
music_content_moderation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: __init__.py  app.py  environment.py  graders.py  main.py  models.py
